--- a/src/Pages/Login/Login.css
+++ b/src/Pages/Login/Login.css
@@ -5,7 +5,7 @@
 
 .main2{
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     height: 100vh;
     justify-content: center;
     align-content: center;
@@ -82,3 +82,32 @@
     margin-top: 10px;
     align-self: center;
 }
+
+
+
+    
+@media screen and (min-width:280px) and (max-width:720px) {
+
+    
+    .ipf{
+        width: 300px;
+        height: 40px;
+        align-self: center;
+        border-radius: 30px;
+        outline: none;
+        margin-top: 30px;
+        border-color: rgba(0, 0, 255, 0.877);
+        opacity: 0.6;
+        
+    
+    }
+    
+    
+    
+    
+        }
+
+  
+        
+        
+    
